--- a/registrarse2.css
+++ b/registrarse2.css
@@ -1,68 +1,101 @@
-
+*{
+    margin: 0%;
+}
 body{
+   
     background-image: url(img/fondopeli.jpg);
+    background-size: 500px 500px;
+    display: flex;
+    justify-content: center; 
+   align-items: center;
+  
+
+   
 }
 
 
 #conteiner{
-width: 500px;
-height: 400px;
-background-color:rgb(65, 70, 73);
-display:flex ;
-margin-left: 100px;
-margin-top: 100px;
-padding-top: 10px;
+
+    margin-top: 100px;
+    background-color: rgb(67, 68, 70);
+    display: flex;
+   justify-content: center;
+    width: 450px;
+    height: 500px;
+   align-items:center
+
+
 }
+
 
 
 
 #disabledSelect{
-    width:300px;
-    margin-left: 100px;
-    border-radius: 30px;
+    width: 300px;
+    border-radius:30px;
 }
 
 #disabledTextInput{
-    margin-left: 100px;
+   
     width:300px;
     border-color:#9f3647;
     border-radius: 30px;
 }
 
 .registro{
-    margin-left: 100px;
-   
-    color: beige;
+    text-align: center;
+   color: beige;
 }
 
 .form-check-label{
-    margin-left: 100px;
+    margin-left: 50px;
     border-radius: 30px;
     color: beige; 
-   
 
 }
 
 
 #disabledFieldsetCheck{
-    margin-left: 100px;
-  
-   
+    margin-left: 80px;   
 }
 
-.form-check-input{
-    color: beige;
-   
-}
 
-.btn{
+.btn-primary{
     background-color:#9f3647;
-    border-color: red;
+    border:2px solid #9f3647;
+    color: antiquewhite;
+    border-radius: 5px;
+    width: 300px;
+    height: 45px; 
    
 
+}   
+
+.btn-primary:hover{
+    background-color:#9f3647;
+    border:2px solid #9f3647;
+
 }
+
+
 
 .form-select{
-    border-color:#9f3647;
+    border:2px solid #9f3647;
     
 }
+
+#nacimientoInput{  
+    height:40px;
+    width: 300px;
+    border: 1px solid red;
+    border-radius: 30px;
+   margin-bottom: 20px;
+     padding: 2px 8px;
+
+}
+
+a{
+    text-decoration:none ;
+    color: antiquewhite;
+}
+
